# nparser

./: .gitignore  LICENCE  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: python_build.yml
src/nparser/: __init__.py  _nparser.pyx
tests/: test_compressed.py  test_encoding.py  test_parsing.py  test_w3c_ntriple.py  timing.py
tests/compressed/: compressed.nt  compressed.nt.bz2  compressed.nt.tar  compressed.nt.xz
tests/encoding/: ansi.nt  utf16_be_bom.nt  utf16_le_bom.nt  utf8.nt  utf8_bom.nt
